hardcode tzlocal in .circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,6 +51,7 @@ defaults: &defaults
          virtualenv ci
          . ci/bin/activate
          python setup.py develop
+         pip install tzlocal<=4.4b1
          pip install pytest-server-fixtures[mongodb]
          pip freeze
          python --version
