tzlocal==4.4 in circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,8 @@ defaults: &defaults
          . ci/bin/activate
          python setup.py develop
          pip install pytest-server-fixtures[mongodb]
+         pip uninstall tzlocal
+         pip install tzlocal==4.4
          pip freeze
          python --version
     - run:
