--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,8 +52,8 @@ defaults: &defaults
          . ci/bin/activate
          python setup.py develop
          pip install pytest-server-fixtures[mongodb]
-         pip uninstall tzlocal
-         pip install tzlocal==4.4
+         pip uninstall tzlocal # because circleci will install >5.0
+         pip install tzlocal==4.4b1
          pip freeze
          python --version
     - run:
