--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,8 +53,8 @@ defaults: &defaults
          python setup.py develop
          pip install --upgrade pip
          pip install pytest-server-fixtures[mongodb]
-         echo y | pip uninstall tzlocal # because circleci will install >5.0b
-         pip install tzlocal==4.2 # works for python 3.6 and 3.8
+         #echo y | pip uninstall tzlocal # because circleci will install >5.0b
+         #pip install tzlocal==4.2 # works for python 3.6 and 3.8
          pip freeze
          python --version
     # Save dependency cache
